<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nombre"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/textViewIntro"
        android:layout_alignRight="@+id/textViewApellido"
        android:layout_alignEnd="@+id/textViewApellido" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint=""
        android:maxWidth="6dp"
        android:layout_alignBottom="@+id/textViewNombre"
        android:layout_toRightOf="@+id/textViewColorFav"
        android:layout_toEndOf="@+id/textViewColorFav">

        <requestFocus />
    </EditText>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BtnEnviar"
        android:layout_below="@+id/textViewColorFav"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Rellene_lo_campos"
        android:id="@+id/textViewIntro"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="21dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Apellido"
        android:id="@+id/textViewApellido"
        android:layout_alignTop="@+id/editTextApellido"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextApellido"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textViewNombre"
        android:layout_alignLeft="@+id/editTextNombre"
        android:layout_alignStart="@+id/editTextNombre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Edad"
        android:id="@+id/textViewEdad"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/editTextApellido"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextEdad"
        android:layout_alignBottom="@+id/textViewEdad"
        android:layout_alignLeft="@+id/editTextApellido"
        android:layout_alignStart="@+id/editTextApellido" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Color_Favorito"
        android:id="@+id/textViewColorFav"
        android:layout_alignBottom="@+id/editTextColor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextColor"
        android:layout_below="@+id/textViewEdad"
        android:layout_alignLeft="@+id/editTextEdad"
        android:layout_alignStart="@+id/editTextEdad"
        android:layout_marginTop="40dp" />

</RelativeLayout>